@@ -1,2 +1,7 @@
+from lovely.pyrest import base
 #
-VERSION="2.0.4"
+VERSION = "2.0.4"
+
+
+def includeme(config):
+    base.includeme(config)
