@@ -2,6 +2,9 @@ from __future__ import absolute_import
 from docutils.core import publish_from_doctree, publish_doctree
 from contextlib import contextmanager
 from lovely.pyrest.rest import SERVICES
+from pyramid import testing
+from webtest import TestApp
+from importlib import import_module
 import unittest
 import doctest
 import os
@@ -77,11 +80,32 @@ def render_doc_node(node, writer_name='pseudoxml'):
     return publish_from_doctree(doc, writer_name=writer_name)
 
 
+def get_app(module_str):
+    # scans the defined module and returns
+    # a TestApp
+
+    # Settings can also be defined in a .ini file.
+    settings = {
+        'lovely.pyrest.jsonp.param_name': 'callback'
+    }
+    config = testing.setUp(settings=settings)
+    config.include('lovely.pyrest')
+    module = import_module(module_str)
+    # check if the module has an `includeme` method and call it
+    # because the base route must be added
+    if hasattr(module, 'includeme'):
+        module.includeme(config)
+    config.commit()
+    config.scan(module)
+    return TestApp(config.make_wsgi_app())
+
+
 def setUp(test):
     test.globs['print_json'] = print_json
     test.globs['pprint'] = pprint.pprint
     test.globs['render_doc_node'] = render_doc_node
     test.globs['render_doc'] = render_doc
+    test.globs['get_app'] = get_app
 
 
 def tearDown(test):
@@ -106,5 +130,6 @@ def test_suite():
         create_suite('validation.rst'),
         create_suite('sphinx/service.txt'),
         create_suite('../../docs/sphinx.txt'),
+        create_suite('../../docs/index.txt'),
     ))
     return s
